# material-navigator-lib

./: README.md  pyproject.toml
mat_nav_lib/: __init__.py  oxides.py  recommend.py
mat_nav_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_phase1.py
