[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mat-nav-lib"
version = "0.1.0"
description = "Material Navigator Library – glass oxide data and property prediction utilities"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.optional-dependencies]
predict = ["glasspy>=0.6.0"]
